# mcp-read-only-sql

./: .env.sample  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  READ_ONLY_ENFORCEMENT_MATRIX.md  RELEASING.md  conftest.py  connections.yaml.sample  credentials.env.example  docker-compose.yml  justfile  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: publish.yml  test.yml
docker/clickhouse/init/: 01_init.sql
docker/postgres/init/: 01_schema.sql  02_data.sql
docker/ssh/: Dockerfile
src/: runtime_paths.py  server.py
src/config/: connection.py  dbeaver_import.py  env_files.py  loader.py  parser.py
src/connectors/: base.py  base_cli.py
src/connectors/clickhouse/: cli.py  python.py
src/connectors/postgresql/: cli.py  python.py
src/mcp_read_only_sql/: __init__.py  cli_binaries.py  connections.yaml.sample  runtime_paths.py  server.py
src/mcp_read_only_sql/config/: __init__.py  connection.py  dbeaver_import.py  loader.py  parser.py
src/mcp_read_only_sql/connectors/: __init__.py  base.py  base_cli.py
src/mcp_read_only_sql/connectors/clickhouse/: __init__.py  cli.py  python.py
src/mcp_read_only_sql/connectors/postgresql/: __init__.py  cli.py  python.py
src/mcp_read_only_sql/tools/: __init__.py  test_connection.py  test_ssh_tunnel.py  validate_config.py
src/mcp_read_only_sql/utils/: __init__.py  connection_utils.py  json_serializer.py  sql_guard.py  ssh_tunnel.py  ssh_tunnel_cli.py  timeout_wrapper.py  tsv_formatter.py
src/tools/: test_connection.py  test_ssh_tunnel.py  validate_config.py
src/utils/: connection_utils.py  ssh_tunnel.py  ssh_tunnel_cli.py  timeout_wrapper.py
tests/: KNOWN_ISSUES.md  README.md  conftest.py  conftest_new.py  connections-test.yaml  docker_test_config.py  pytest_plugins.py  sql_statement_lists.py  test_cli_binaries.py  test_cli_connection_timeout.py  test_cli_size_limits.py  test_cli_ssh_tunnels.py  test_cli_system_ssh.py  test_cli_versions.py  test_clickhouse_cli_fallback.py  test_config_connection.py  test_config_parser.py  test_connection_utils.py  test_connections_reload.py  test_connector_implementations.py  test_dbeaver_import.py  test_docker_connectivity.py  test_docker_test_config.py  test_error_handling.py  test_hard_timeout.py  test_host_mapping_flow.py  test_limits.py  test_mcp_protocol.py  test_mcp_server.py  test_postgresql_cli_fallback.py  test_process_cleanup.py  test_result_serialization.py  test_run_query_file_output.py  test_runtime_paths.py  test_security_layers.py  test_security_readonly.py  test_security_readonly_integration.py  test_security_size_limits.py  test_security_timeout.py  test_serialization_fallback.py  (+5 more)
