[project]
name = "mcp-read-only-sql"
version = "0.2.5"
description = "MCP server for read-only SQL queries supporting PostgreSQL and ClickHouse"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["sql", "postgresql", "clickhouse", "mcp", "read-only"]
authors = [
    {name = "Lukas Lehner", email = "lehner.lukas@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.0",
    "clickhouse-connect>=0.7.0",
    "paramiko>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/lukleh/mcp-read-only-sql"
Repository = "https://github.com/lukleh/mcp-read-only-sql"
Issues = "https://github.com/lukleh/mcp-read-only-sql/issues"
Changelog = "https://github.com/lukleh/mcp-read-only-sql/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.28",
    "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-read-only-sql = "mcp_read_only_sql.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_read_only_sql"]

[tool.ty.src]
include = ["src"]

[tool.vulture]
paths = ["src", "tests"]
exclude = [".venv", "venv", "build", "dist", "node_modules", "__pycache__", "site-packages"]
ignore_decorators = ["@*.tool*", "@pytest.fixture"]
ignore_names = ["pytest_*"]
min_confidence = 80
